--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
@@ -31,6 +32,6 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
-    "react-toastify": "^5.0.0"
+    "resolve-url-loader": "^3.1.0"
   }
 }
